Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Histograms should not be used solely to detect normality directly\n",
+    "# Histograms are better to look for symmetry, skewness, and outliers \n",
+    "# These can instead be used to get an indications of non-normality. \n",
+    "\n",
+    "# We see some outliers in our datasets\n",
+    "# no clear indications of non-normality for each plot."
+   ]
   },
   {
    "cell_type": "code",
