Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -232,7 +232,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# The QQ plot is a much better visualization of data as gives a reference to compare against  \n",
+    "# Shows a better picture about normality instead of relying on the histograms (or box plots).\n",
+    "# From QQ plot we can be more assured our data is normal - compared to non normality check in histogram"
+   ]
   },
   {
    "cell_type": "markdown",
