--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -276,19 +276,14 @@
    "source": [
     "# You code here \n",
     "\n",
-    "\n",
     "def ks_plot(data):\n",
     "\n",
-    "    plt.figure(figsize=(10, 7))\n",
-    "    plt.plot(np.sort(data), np.linspace(0, 1, len(data), endpoint=False))\n",
-    "    plt.plot(np.sort(stats.norm.rvs(loc=0, scale=3, size=len(data))), np.linspace(0, 1, len(data), endpoint=False))\n",
-    "\n",
-    "    plt.legend(['ECDF', 'CDF'])\n",
-    "    plt.title('Comparing CDFs for KS-Test, Sample size=' + str(len(data)))\n",
+    "    pass\n",
     "    \n",
-    "\n",
-    "ks_plot(stats.norm.rvs(loc=0, scale=3, size=100)) \n",
-    "ks_plot(stats.norm.rvs(loc=5, scale=4, size=100))"
+    "# Uncomment below to run the test\n",
+    "# ks_plot(stats.norm.rvs(loc=0, scale=3, size=100)) \n",
+    "# ks_plot(stats.norm.rvs(loc=5, scale=4, size=100))\n",
+    "\n"
    ]
   },
   {
