Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -359,7 +359,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comments here \n"
+    "# Your comments here \n",
+    "# As we have more data values to compare, we get a better idea of normality\n",
+    "# Due to randomness in smaller sample size, it is very likely that value of d would be high\n",
+    "# As our sample size goes from 50 to a 1000, we are in much better position to comment on normality"
    ]
   },
   {
