Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -430,7 +430,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comments here \n"
+    "# P-value in all cases is much greater than .05 \n",
+    "# We can not hence reject the Null Hypothesis i.e. our sample is IDENTICAL to a normal distribution\n",
+    "# This is very intuitive as we started off with normal distributions"
    ]
   },
   {
