Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -472,7 +472,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comments here \n"
+    "# Your comments here \n",
+    "# In the first case we can reject Null Hypothesis and conclude that our sample is a uniform distribution\n",
+    "# In second case, comparing uniform dist. against a normal CDF, we get p value - 0 , accpeting Null with a high\n",
+    "# degree of confidence "
    ]
   },
   {
