Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -533,7 +533,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# You comments here \n"
+    "# You comments here \n",
+    "# x_100 and x_100_bi diverge a lot \n",
+    "# We can expect a high value for d statistic "
    ]
   },
   {
