Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -551,8 +551,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check if the distributions are equal\n",
-    "stats.ks_2samp(x_1000, x_bimodal_100[:,0])\n",
+    "# You rcode here\n",
     "\n",
     "# Ks_2sampResult(statistic=0.575, pvalue=1.2073337530608254e-14)"
    ]
