--- a/index.ipynb
+++ b/index.ipynb
@@ -525,7 +525,7 @@
     "    plt.legend(['Data_1', 'Data_2'])\n",
     "    plt.title('Comparing 2 CDFs for KS-Test')\n",
     "    \n",
-    "ks_plot_comp(x_100, x_bimodal_100[:,0])"
+    "ks_plot_c(x_100, x_bimodal_100[:,0])"
    ]
   },
   {
