--- a/index.ipynb
+++ b/index.ipynb
@@ -497,18 +497,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'ks_plot_comp' is not defined",
+     "evalue": "name 'ks_plot_c2sample' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-32-ac19b75e67e1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Comparing 2 CDFs for KS-Test'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mks_plot_comp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_bimodal_100\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'ks_plot_comp' is not defined"
+      "\u001b[0;32m<ipython-input-36-92d538df4b79>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Comparing 2 CDFs for KS-Test'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mks_plot_c2sample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_bimodal_100\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'ks_plot_c2sample' is not defined"
      ]
     }
    ],
@@ -525,7 +525,7 @@
     "    plt.legend(['Data_1', 'Data_2'])\n",
     "    plt.title('Comparing 2 CDFs for KS-Test')\n",
     "    \n",
-    "ks_plot_c(x_100, x_bimodal_100[:,0])"
+    "ks_plot_c2sample(x_100, x_bimodal_100[:,0])"
    ]
   },
   {
